default/objects/Incentive_Payment__c/Incentive_Payment__c.object-meta.xml
<CustomObject>
    <label>Incentive Payment</label>
    <nameField>
        <displayFormat>IP-{000000000}</displayFormat>
        <label>Incentive Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>