default/objects/Incentive_Payment__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <referenceTo>Incentive__c</referenceTo>
    <relationshipLabel>Incentive Payments</relationshipLabel>
    <relationshipName>Incentive_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>