default/objects/Incentive_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Incentive__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>