default/objects/Incentive_Payment__c/listViews/Payments_Last_Month.listView-meta.xml
<ListView>
    <fullName>Payments_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Incentive__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Payments Last Month</label>
</ListView>